--- a/login.html
+++ b/login.html
@@ -102,20 +102,10 @@
 		  <a href="http://www.google.com"><button>Click Me</button></a>
 	  </div>
 		  <div class="container">
-		  <h1> Welcome back!..... </h1>
+	<!--	  <h1> Welcome back!..... </h1> -->
       <div class="row">
         <div class="col-sm-4 col-sm-push-4">
-          <!-- <div class="loader">
-            <div class="spinner"></div>
-            <div class="spinner2"></div>
-          </div>
-          <a href="#" class="checkmark">
-            <span>
-              <span class="s1"></span>
-              <span class="s2"></span>
-              <span class="s3"></span>
-            </span>
-          </a> -->
+          
           <div class="well login">
             <div class="col-sm-12 header"><span>Login</span></div>
             <form method="post" action="" enctype="multipart/form-data" class="form-horizontal">
@@ -146,11 +136,11 @@
     </div>
 </div>
 
-
+<!--
 <button class="btn remove">remove</button>
       <div class="wrapper">
 		  <a href="http://www.google.com"><button>Click Me</button></a>
-	  </div>
+	  </div> -->
    </body>
 <!-- Latest compiled and minified JavaScript 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>  
